Refactor FlashNewsNotifier for improved ID handling